ubiquity (1.1.18) UNRELEASED; urgency=low

  * Reconfigure usplash (closes: Malone #59320).
  * Divert away update-initramfs while configuring hardware-specific
    packages, and run it just once at the end.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Sep 2006 18:12:49 +0100

ubiquity (1.1.17) edgy; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend
    - Enable buttons on summary page
    - Don't accept a blank string for the grub device
    - Use correct strings for grub dialogue box

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Sep 2006 14:01:52 +0100

ubiquity (1.1.16) edgy; urgency=low

  [ Colin Watson ]
  * Reconfigure popularity-contest.
  * KDE frontend: Fix crash when moving off the mountpoints page (closes:
    Malone #60045).
  * Automatic update of included source packages: base-installer
    1.63ubuntu4, console-setup 1.7ubuntu8.

  [ Jonathan Riddell ]
  * KDE frontend: Put a link on the summary page to allow the user to
    install GRUB to somewhere other than the MBR of the first hard disk

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Sep 2006 12:39:34 +0100

ubiquity (1.1.15) edgy; urgency=low

  * syslog.LOG_WARN -> syslog.LOG_WARNING (closes: Malone #59257).
  * Point console-setup.postinst at /var/lib/dpkg/info/console-setup.config
    directly, rather than trying to make a symlink to it and apparently
    failing (closes: Malone #59496).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  8 Sep 2006 12:43:35 +0100

ubiquity (1.1.14) edgy; urgency=low

  * Put some of console-setup/Keyboard back, as we need KeyboardNames.pl
    from there.
  * Don't include console-setup's build-dependencies in our own.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Sep 2006 20:10:07 +0100

ubiquity (1.1.13) edgy; urgency=low

  * Rename configure.in to configure.ac.
  * Drop backward compatibility for base-config/language-packs preseeding
    from Breezy.
  * Move from kbd-chooser to console-setup